data/derived/comb/progs/unify/prog7911.ml.out
Characters 30-44:
  let bigMul l1 l2 = mulByDigit (bigAdd l1 l2);;
                                ^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
